# nervx

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
nervx/: __init__.py  build.py
nervx/attention/: __init__.py  ask.py  briefing.py  callers.py  concepts.py  fuzzy.py  graph_paths.py  peek.py  query.py  reader.py  string_refs.py  synonyms.json  test_coverage.py  trace.py  tree.py  uses.py  verify.py
nervx/cli/: __init__.py  main.py  watch.py
nervx/instinct/: __init__.py  frameworks.py  patterns.py
nervx/memory/: __init__.py  schema.py  store.py
nervx/perception/: __init__.py  git_miner.py  ignore.py  lang_c.py  lang_csharp.py  lang_go.py  lang_java.py  lang_javascript.py  lang_ruby.py  lang_rust.py  languages.py  linker.py  parser.py
nervx/reflexes/: __init__.py  warnings.py
nervx/tools/: __init__.py  runners.py
nervx/viz/: export.py  server.py  template.html
tests/: test_briefing.py  test_build.py  test_export.py  test_git_miner.py  test_linker.py  test_parser.py  test_patterns.py  test_query.py  test_store.py  test_warnings.py  test_watch.py
tests/fixtures/sandbox/: KGRAPH.md  main.py
tests/fixtures/sandbox/agents/: __init__.py  base_agent.py  claude_agent.py  factory.py  gpt_agent.py
tests/fixtures/sandbox/game/: __init__.py  events.py  state.py  voting.py
tests/fixtures/sandbox/memory/: __init__.py  index.py  store.py
tests/fixtures/sandbox/server/: __init__.py  handler.py
tests/fixtures/sandbox/tests/: __init__.py  test_agent.py  test_voting.py
